# subitis

./: .gitignore  README.md  agent.py  buffer2.py  client_communication_examples.md  client_server_architecture.md  conversation_simulator.py  groq_test.py  main.py  main_websocket_server.py  pyproject.toml  rag.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/hospitals/: route.ts
frontend/components/: dashboard-layout.tsx  dashboard-view.tsx
frontend/public/: suggestions.json
