[project]
name = "berk25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "groq>=0.28.0",
    "letta-client>=0.1.167",
    "openai>=1.90.0",
    "pinecone>=7.2.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "websocket>=0.2.1",
    "websockets>=15.0.1",
]
